tests/suite/snapshots/suite__check__tests__check__bad_var_shadowing_4.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_var_shadowing_4.xi:8:21]
   │
 8 │                     bar, baz, foo: int
   ·                     ─────────┬────────  
   ·                              ╰────────── Name already bound in environment
───╯

